--- a/reviews/20260118_120253_4022633.md
+++ b/reviews/20260118_120253_4022633.md
@@ -38,22 +38,31 @@ However, the commit is not atomic as it bundles this unrelated bug fix with the 
 *   **Issue:** The commit message `fix(reconciler): correct createContainer signature to 10 params` accurately describes the change to `src/reconciler/root.ts` but completely omits any mention of the newly added review file.
 *   **Impact:** A developer reading the git log would be unaware that this commit also adds a code review, making the history less transparent.
 
-### Suggested Improvements
+### Context: Atomic Commit Pattern
 
-#### Split into Atomic Commits
+The codebase uses `.claude/commands/commit.md` which enforces atomic commits through logical grouping:
+- Each commit should represent a single logical change
+- Changes grouped by domain (orchestrator, components, docs, tests, etc.)
+- Conventional commit format with emoji prefixes
+- Never mix unrelated changes even if modified in same session
 
-To improve the project's history, this work should be split into two separate, focused commits. This can be achieved using `git rebase -i` or by resetting and re-committing.
+### Why This Matters
 
-*   **Commit 1: `fix(reconciler): correct createContainer signature to 10 params`**
-    *   This commit should only contain the changes to `src/reconciler/root.ts`.
-    ```
-    MODIFIED src/reconciler/root.ts
-    ```
+1. **Git bisect reliability**: Mixed commits make debugging harder when identifying which change introduced a bug
+2. **Revert granularity**: Can't revert the reconciler fix without also removing the unrelated review file
+3. **History clarity**: `git log` and `git blame` become less useful when commits bundle unrelated work
+4. **Code review**: Reviewers must context-switch between unrelated changes in same commit
 
-*   **Commit 2: `docs(review): add review for commit c00fc94`**
-    *   This commit should only contain the new review file.
-    ```
-    ADDED reviews/20260118_120016_c00fc94.md
-    ```
+### How to Prevent (Future Reference)
 
-This separation will create a clean, readable, and maintainable git history. No functional bugs were found in the code changes themselves; the issue is purely structural.
+When working on fixes:
+1. Complete logical change (e.g., reconciler fix)
+2. Stage ONLY related files: `git add src/reconciler/root.ts`
+3. Commit with focused message
+4. Then handle unrelated changes (review files) in separate commit
+
+The `.claude/commands/commit.md` skill automates this by grouping files logically before creating commits.
+
+### Resolution
+
+This commit is historical (23+ commits deep). Rebasing would rewrite history affecting all downstream commits. Keeping this review as documentation of atomic commit principles for future reference.
