--- a/reviews/20260118_130001_3745f40.md
+++ b/reviews/20260118_130001_3745f40.md
@@ -1,5 +1,6 @@
 # Code Review for Commit 3745f40
 
+**Scope:** major
 **Date:** 2026-01-18 13:00:01
 **Commit Message:** test commit
 
@@ -19,8 +20,15 @@ However, this is overshadowed by two major issues:
 
 1.  **Critical Regression: TUI Type Definitions Excluded**
     - **File:** `tsconfig.json`
-    - **Line:** 60
-    - **Description:** Adding `"src/tui"` to the `exclude` array is a critical error. This directory contains the TypeScript definitions for custom TUI components. Excluding it will cause the TypeScript compiler to fail to recognize custom JSX elements like `<box>` and `<text>`, breaking type safety for the entire terminal interface layer. This was likely done to temporarily suppress compilation errors but must not be part of a final commit.
+    - **Line:** 57 (in current codebase)
+    - **Status:** STILL PRESENT - Issue NOT addressed
+    - **Description:** Adding `"src/tui"` to the `exclude` array is a critical error. This directory contains TypeScript definitions for OpenTUI components (12 .tsx files). The exclusion was added to suppress TypeScript errors caused by JSX configuration mismatch:
+      - Main codebase uses Smithers custom JSX runtime (`jsxImportSource: "react"`)
+      - TUI code uses standard React JSX with OpenTUI elements (`<box>`, `<scrollbox>`)
+      - TSC fails with "Cannot use JSX unless the '--jsx' flag is provided" errors
+    - **Impact:** Silently disables type-checking for entire TUI subsystem (bin/cli.ts imports from src/tui/index.tsx)
+    - **Root Cause:** JSX configuration conflict - TUI needs React JSX, reconciler needs custom JSX runtime
+    - **Proper Fix:** Create separate tsconfig for TUI directory or use project references to allow different JSX configs per subsystem
 
 2.  **Uninformative Commit Message**
     - **Description:** The commit message "test commit" provides no insight into the changes. The commit contains a major memory leak fix, a refactoring of the JSX runtime behavior, and the addition of new review documents. A descriptive message is essential for code maintainability.
@@ -35,8 +43,28 @@ However, this is overshadowed by two major issues:
 
 ### Suggested Improvements
 
-1.  **Revert `tsconfig.json` Change:** The exclusion of `"src/tui"` must be reverted to restore build integrity and type safety.
-2.  **Split and Re-commit with Proper Messages:** The changes should be split into logical commits with descriptive messages. For example:
-    - **Commit 1 (The Fix):** `fix(reconciler): Prevent memory leaks by clearing parent pointers on unmount`. This would include the excellent changes to `host-config.ts`, `methods.ts`, `root.ts`, and the new tests in `hooks-integration.test.tsx`.
-    - **Commit 2 (The Refactor):** `refactor(jsx): Align jsx() output with React element structure`. This would contain the changes to `src/components/components.test.tsx` and make the architectural change explicit.
-3.  **Clarify Process for Review Files:** The addition of the review markdown files should be done in a separate commit with a message that explains their purpose, e.g., `docs: Add code reviews for recent architectural changes`.
+1.  **Fix TUI TypeScript Configuration (Critical):**
+    - **Option A (Recommended):** Create `src/tui/tsconfig.json` extending root config with `"jsx": "react-jsx"` override
+    - **Option B:** Use TypeScript project references to allow TUI subsystem its own JSX config
+    - **Option C:** Move TUI to separate package with its own build config
+    - Remove `"src/tui"` from exclude array in root tsconfig.json
+    - Verify with: `bunx tsc --noEmit` (should type-check both reconciler and TUI)
+
+2.  **Split and Re-commit with Proper Messages:** The changes should be split into logical commits with descriptive messages:
+    - **Commit 1 (The Fix):** `fix(reconciler): Prevent memory leaks by clearing parent pointers on unmount`. Include changes to `host-config.ts`, `methods.ts`, `root.ts`, and tests in `hooks-integration.test.tsx`.
+    - **Commit 2 (The Refactor):** `refactor(jsx): Align jsx() output with React element structure`. Include changes to `src/components/components.test.tsx`.
+    - **Commit 3:** Revert the tsconfig change or implement proper fix above.
+
+3.  **Clarify Process for Review Files:** The addition of review markdown files should be in separate commit: `docs: Add code reviews for recent architectural changes`.
+
+### Codebase Context for Fix
+
+**Similar Patterns:**
+- Project already has bunfig.toml with JSX config - TUI could use similar approach
+- Reference submodules pattern shows project uses modular architecture
+- Custom hooks in `src/reconciler/hooks` demonstrate separation of concerns
+
+**Related Files:**
+- `/Users/williamcory/smithers/bunfig.toml` - Bun runtime JSX config
+- `/Users/williamcory/smithers/src/tui/opentui.d.ts` - OpenTUI type definitions
+- `/Users/williamcory/smithers/bin/cli.ts:8` - Imports launchTUI from excluded directory
