--- a/docs/api-reference/human.mdx
+++ b/docs/api-reference/human.mdx
@@ -95,13 +95,24 @@ const pending = db.human.listPending(): HumanInteraction[]
 interface HumanInteraction {
   id: string;
   execution_id: string;
-  type: string;
+  type: 'confirmation' | 'select' | 'input' | 'text' | 'interactive_session';
   prompt: string;
   options: string[] | null;
-  status: 'pending' | 'approved' | 'rejected' | 'timeout';
+  status:
+    | 'pending'
+    | 'approved'
+    | 'rejected'
+    | 'timeout'
+    | 'cancelled'
+    | 'completed'
+    | 'failed';
   response: any | null;
   created_at: string;
   resolved_at: string | null;
+  session_config?: InteractiveSessionConfig | null;
+  session_transcript?: string | null;
+  session_duration?: number | null;
+  error?: string | null;
 }
 ```
 
@@ -144,6 +155,50 @@ interface UseHumanResult {
 
 interface AskOptions {
   options?: string[];
+}
+```
+
+## useHumanInteractive Hook
+
+Interactive human sessions for complex decisions:
+
+```tsx
+import { useHumanInteractive } from "smithers-orchestrator/hooks";
+
+function ReviewWorkflow() {
+  const { requestAsync, status } = useHumanInteractive();
+
+  const handleReview = async () => {
+    const result = await requestAsync(
+      "Review the refactor and decide whether to proceed.",
+      { captureTranscript: true }
+    );
+
+    if (result.outcome === "completed" && result.response === "approved") {
+      // Proceed
+    }
+  };
+
+  return (
+    <button onClick={handleReview} disabled={status === "pending"}>
+      Request review
+    </button>
+  );
+}
+```
+
+### useHumanInteractive API
+
+```tsx
+interface UseHumanInteractiveResult<T = InteractiveSessionResult> {
+  request: (prompt: string, options?: AskInteractiveOptions) => void;
+  requestAsync: (prompt: string, options?: AskInteractiveOptions) => Promise<T>;
+  status: "idle" | "pending" | "success" | "error";
+  data: T | null;
+  error: Error | null;
+  sessionId: string | null;
+  cancel: () => void;
+  reset: () => void;
 }
 ```
 
